# ElGarden

./: .gitignore  CMakeLists.txt  Makefile  README.md  actuators.h  builder.sh  client.py  cmpl.sh  compile.sh  config.py  content_ua.py  defines.h  el_garden.py  run.sh  server.c  socket-helper.h  timer-helper.h  titles.py  titles_en.py  types.h
docker/: Dockerfile  Dockerfile_  Dockerfile_args  Dockerfile_invstg  Dockerfile_invstg2  Dockerfile_invstg3  Dockerfile_mdf  Dockerfile_org  Toolchain-RaspberryPi.cmake  build_docker.sh  loop.sh
include/: actuators.h  common.h  json-helper.h  logs.h  telegram.h  types.h.new
python/: client.py  config.py  el_garden.py  titles_ua.py
src/: compile.sh  main.c
